--- a/GpsTracker.Site/user.html
+++ b/GpsTracker.Site/user.html
@@ -29,10 +29,11 @@
         <a class="navbar-brand" href="index.html">GPS Tracker</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <a href="#about"><button class="btn btn-black navbar-btn">Dowload</button></a>
-        <a><button class="btn btn-black navbar-btn" data-toggle="collapse" data-target="#about_panel">About</button></a>
+        <a href="#about"><button class="btn-black">Dowload</button></a>
+        <a><button class="btn-black" data-toggle="collapse" data-target="#about_panel">About</button></a>
         <div class="nav navbar-nav navbar-right">
-          <button class="btn btn-black navbar-btn" data-toggle="collapse" data-target="#user_panel">ID: 8172424</button>
+          <img src="boy.png" id="current_user">
+          <button class="btn-black" data-toggle="collapse" data-target="#user_panel">Username</button>
         </div>
         <div class="input-group nav navbar-nav navbar-right navbar-inverse align-middle" style="width: 300px;margin-top: 7px">
           <div class="input-group-btn search-panel">
@@ -68,11 +69,14 @@
 
   <div class="w3-conrainer w3-white collapse panel" id="about_panel">
     <div class="w3-twothird w3-container">
-      <h2>Over 25 Years Of Experience</h2>
-      <p>Founded in 1991, TomTom has grown from a Dutch-based start-up company into a leading multi-national, global brand with products sold to customers across various markets reaching over 800 million people around the world every day.</p>
-      <h2>Global Coverage</h2>
-      <p>We have one of the most extensive digital map databases with a portfolio of 14 trillion data points reaching more than 4 billion people worldwide.  To create and maintain our various products and services, we process billions of data points every
-        day on a truly global scale.</p>
+      <div class="w3-conrainer w3-row">
+        <h2>1 month of experience</h2>
+        <p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project  "GPS navigator".</p>
+      </div>
+      <div class="w3-conrainer w3-row">
+        <h2>Result</h2>
+        <p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
+      </div>
     </div>
     <div class="w3-third w3-container">
       <h2>Brand Assets</h2>
