--- a/GpsTracker.Site/index.html
+++ b/GpsTracker.Site/index.html
@@ -56,46 +56,14 @@
   </nav>
 
   <div class="w3-conrainer w3-white collapse" id="about_panel">
-    <div class="w3-twothird w3-container" style="display: inline-block">
-      <div class="w3-conrainer w3-row">
-        <h2>1 month of experience</h2>
-        <p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project  "GPS navigator".</p>
-      </div>
-      <div class="w3-conrainer w3-row">
-        <h2>Result</h2>
-        <p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
-      </div>
+    <div class="w3-conrainer w3-row">
+      <h2 class="w3-center">1 month of experience</h2>
+      <p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project "GPS navigator".</p>
     </div>
-    <div class="w3-third w3-container" style="display: inline-block">
-      <h2>Brand Assets</h2>
-      <div class="w3-row">
-        <div class="w3-col w3-quarter">
-          <div class="circle w3-green w3-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:30%">
-          <div class="circle w3-grey w3-right w3-margin-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:35%">
-          <div class="circle w3-black w3-left w3-margin-left">
-          </div>
-        </div>
-      </div>
-      <div class="w3-row">
-        <div class="w3-col" style="width:38%">
-          <div class="circle w3-border w3-border-black w3-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:23%">
-          <div class="circle w3-red w3-right w3-margin-left">
-          </div>
-        </div>
-      </div>
-      <p>Brand guidance on color and logo usage for download.</p>
-      <button class="w3-bar-item w3-button w3-round-xlarge w3-green">Download Brand Assets</button>
+    <div class="w3-conrainer w3-row">
+      <h2 class="w3-center">Result</h2>
+      <p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
     </div>
-
   </div>
 
 
@@ -107,12 +75,7 @@
       <input type="password" class="input_login" name="upswd">
       <div class="w3-display-container w3-black" style="height: 50px">
         <div class="w3-display-left">
-          <a href="user.html" class="w3-button w3-white w3-left w3-round-xlarge w3-hover-green"  style="text-decoration:none" >Log in</a>
-        </div>
-        <div class="w3-display-right">
-          <a href="index.html">
-            <p class="w3-right w3 lightblue" style="font-size: 15px; color: blue">Forgot password?</p>
-          </a>
+          <a href="user.html" class="w3-button w3-white w3-left w3-round-xlarge w3-hover-green" style="text-decoration:none">Log in</a>
         </div>
       </div>
     </form>
