--- a/GpsTracker.Site/settings.html
+++ b/GpsTracker.Site/settings.html
@@ -73,49 +73,16 @@
     </div>
   </footer>
 
-  <div class="w3-conrainer w3-white collapse panel" id="about_panel">
-    <div class="w3-twothird w3-container">
-      <div class="w3-conrainer w3-row">
-        <h2>1 month of experience</h2>
-        <p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project  "GPS navigator".</p>
-      </div>
-      <div class="w3-conrainer w3-row">
-        <h2>Result</h2>
-        <p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
-      </div>
+  <div class="w3-conrainer w3-white collapse" id="about_panel">
+    <div class="w3-conrainer w3-row">
+      <h2 class="w3-center">1 month of experience</h2>
+      <p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project "GPS navigator".</p>
     </div>
-    <div class="w3-third w3-container">
-      <h2>Brand Assets</h2>
-      <div class="w3-row">
-        <div class="w3-col" style="width:25%">
-          <div class="circle w3-green w3-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:30%">
-          <div class="circle w3-grey w3-right w3-margin-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:35%">
-          <div class="circle w3-black w3-left w3-margin-left">
-          </div>
-        </div>
-      </div>
-      <div class="w3-row">
-        <div class="w3-col" style="width:38%">
-          <div class="circle w3-border w3-border-black w3-right">
-          </div>
-        </div>
-        <div class="w3-col" style="width:23%">
-          <div class="circle w3-red w3-right w3-margin-left">
-          </div>
-        </div>
-      </div>
-      <p>Brand guidance on color and logo usage for download.</p>
-      <button class="w3-bar-item w3-button w3-round-xlarge w3-green">Download Brand Assets</button>
+    <div class="w3-conrainer w3-row">
+      <h2 class="w3-center">Result</h2>
+      <p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
     </div>
-
   </div>
-
 
 
 
@@ -182,7 +149,7 @@
           <div class="w3-half w3-container">
             <div class="input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-              <input name="phone" placeholder="+38(098)391-1212" class="form-control" type="text">
+              <input name="phone" placeholder="+380983971253" class="form-control" type="text">
             </div>
           </div>
         </div>
@@ -204,7 +171,20 @@
             <div class="input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               <input name="day" placeholder="Day" class="form-control" type="text" style="width: 55px">
-              <input name="month" placeholder="Month" class="form-control" type="text" style="width: 115px">
+              <select name="month" class="form-control" style="width: 115px">
+    <option value="January">January</option>
+    <option value="February">February</option>
+    <option value="March">March</option>
+    <option value="April">April</option>
+    <option value="May">May</option>
+    <option value="June">June</option>
+    <option value="July">July</option>
+    <option value="August">August</option>
+    <option value="September">September</option>
+    <option value="October">October</option>
+    <option value="November">November</option>
+    <option value="December">December</option>
+  </select>
               <input name="year" placeholder="Year" class="form-control" type="text" style="width: 55px">
             </div>
           </div>
