--- a/GpsTracker.Site/index.html
+++ b/GpsTracker.Site/index.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="navbar-header col-5">
 						<button class="navbar-toggle collapsed menu_btn" data-toggle="collapse" data-target="#top_menu">
-							
+							<span class="glyphicon">&#xe055;</span> 
 						</button>
 
 						<a href="index.html" class="navbar-brand logo">
@@ -31,33 +31,36 @@
 							<li class="col-2"><a href="#" class="btn btn-default">Download</a>
 							</li>
 							<li class="col-1">
-								<button onclick="showAbout()" class="btn btn-default">About</button>
+								<button onclick="show()" class="btn btn-default">About</button>
 								<div id="about" class="w3-dropdown-content w3-bar-block w3-card-4 w3-display-topmiddle">
-									<h2>1 month of experience</h2>
-									<p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project "GPS navigator".</p>
-									<h2>Result</h2>
+									<h2 class="text-center">1 month of experience</h2>
+									<p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project "GPS tracker".</p>
+									<h2 class="text-center">Result</h2>
 									<p>We have created a web based solution for tracking the position of the device, viewing and monitoring of the traversed path of movement.</p>
 								</div>
 							</li>
-							<li class="col-3 authorized">
-								<div class="form-inline">
-									<select class="form-control" id="search_dropdown">
+<!-- 							<li class="col-3 authorized">
+	<div class="form-inline">
+		<select class="form-control" id="search_dropdown">
 	    								<option value="" disabled selected>Search by</option>
     									<option value="id">Id</option>
     									<option value="login">Login</option>
-									</select>
-									<input type="text" class="form-control" id="search">
-								</div>
-							</li>
+		</select>
+		<input type="text" class="form-control" id="search">
+	</div>
+</li> -->
 							<li class="col-1 authorized">
 								<div class="form_inline">
-									<img src=".glyphicon-user">
+									<img id="avatar" class="img-circle" src="img/avatar.svg">
+									<span id="login_area"></span>
+									<button class="btn-sm btn">Profile</button>
+									<button class="btn-sm btn">Sign out</button>
 								</div>
 							</li>
 							<li class="col-4 unauthorized">
 								<form class="form-signin form-inline" id="sing_form" action="index.html">
 									<input class="form-control" type="text" placeholder="Login" id="login" required>
-									<input class="form-control" type="text" placeholder="Password" id="pass" required>
+									<input class="form-control" type="password" placeholder="Password" id="pass" required>
 									<button class="form-control btn" id="sign_button" onclick="return false;">Sign In</button>
 								</form>
 							</li>
@@ -72,6 +75,7 @@
 
 	<footer class="panel panel-footer">
 		<p class="text-muted text-center">Copyright &copy; 2017 SADYaTTeam. All rights reserverd.</p>
+		<p class="text-muted text-center credits">Icon made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com">www.flaticon.com</a></p>
 	</footer>
 
 	<script src="js/jquery-3.2.1.min.js"></script>
