Managed css folders structure

--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="../css/header/media.css">
+<link rel="stylesheet" type="text/css" href="../css/header/header.css">
 <nav class="navbar-inverse">
 	<div class="container">
 		<div class="row">
@@ -6,7 +8,7 @@
 					<span class="glyphicon">&#xe055;</span> 
 				</button>
 
-				<a href="index.html" class="navbar-brand logo">
+				<a href="http://gpstrackerservice.azurewebsites.net/" class="navbar-brand logo">
 					GpsTracker
 				</a>
 			</div>
