--- a/GpsTracker.Site/pages/footer.html
+++ b/GpsTracker.Site/pages/footer.html
@@ -1,2 +1,3 @@
+<link rel="stylesheet" type="text/css" href="css/footer/footer.css">
 <p class="text-muted text-center">Copyright &copy; 2017 SADYaTTeam. All rights reserverd.</p>
 <p class="text-muted text-center credits">Icon made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com">www.flaticon.com</a></p>
