Initial commit for profile page

--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -40,7 +40,7 @@
 						<div class="form_inline">
 							<img id="avatar" class="img-circle" src="img/avatar.svg">
 							<span id="login_area"></span>
-							<a href="pages/profile.php" class="btn-sm btn">Profile</a>
+							<a href="http://gpstrackerservice.azurewebsites.net/profile.php" class="btn-sm btn">Profile</a>
 							<button class="btn-sm btn" id="sign_out_button" onclick="authorize()">Sign out</button>
 						</div>
 					</li>
