--- a/GpsTracker.Site/index.html
+++ b/GpsTracker.Site/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -73,7 +73,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/view_scripts.js"></script>
 	<script src="js/main/sign-in.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8xt0oziJPSxsF6_Zm52PKhkT1idPNr40&callback=myMap"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8xt0oziJPSxsF6_Zm52PKhkT1idPNr40&callback=initMap"></script>
 </div>	
 </body>
 </html>
