--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -15,7 +15,8 @@
 
 			<div class="collapse navbar-collapse navbar-right col-7" id="top_menu">
 				<ul class="menu">
-					<li class="col-2"><a href="#" class="btn btn-default">Download</a>
+					<li class="col-1">
+						<a href="#" class="btn btn-default">Download</a>
 					</li>
 					<li class="col-1">
 						<button onclick="show()" class="btn btn-default">About</button>
