Site keeps user logged in

--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="../css/header/media.css">
-<link rel="stylesheet" type="text/css" href="../css/header/header.css">
+<link rel="stylesheet" type="text/css" href="css/header/media.css">
+<link rel="stylesheet" type="text/css" href="css/header/header.css">
 <nav class="navbar-inverse">
 	<div class="container">
 		<div class="row">
