draws path between markers as polyline

--- a/GpsTracker.Site/index.html
+++ b/GpsTracker.Site/index.html
@@ -72,9 +72,10 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/view_scripts.js"></script>
-	<script src="js/draw_map.js"></script>
-	<script src="js/main/sign-in.js"></script>
+    <script src="js/draw_map.js"></script>
+	<!--<script src="js/refresh_markers.js"></script>-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8xt0oziJPSxsF6_Zm52PKhkT1idPNr40&callback=initMap"></script>
+    <!--<script>refreshMarkers()</script>-->
 </div>	
 </body>
 </html>
