Fix header and user information

--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -3,9 +3,9 @@
 <nav class="navbar-inverse">
 	<div class="container">
 		<div class="row">
-			<div class="navbar-header col-5">
+			<div class="navbar-header" >
 				<button class="navbar-toggle collapsed menu_btn" data-toggle="collapse" data-target="#top_menu">
-					<span class="glyphicon">&#xe055;</span> 
+					<span class="glyphicon">&#xe055;</span>
 				</button>
 
 				<a href="http://gpstrackerservice.azurewebsites.net/" class="navbar-brand logo">
@@ -16,10 +16,10 @@
 			<div class="collapse navbar-collapse navbar-right col-7" id="top_menu">
 				<ul class="menu">
 					<li class="col-1">
-						<a href="#" class="btn btn-default">Download</a>
+						<a href="#" class="btn btn-default" id="test1">Download</a>
 					</li>
 					<li class="col-1">
-						<button onclick="show()" class="btn btn-default">About</button>
+						<button onclick="show()" class="btn btn-default" id="test2">About</button>
 						<div id="about" class="w3-dropdown-content w3-bar-block w3-card-4 w3-display-topmiddle">
 							<h2 class="text-center">1 month of experience</h2>
 							<p>Founded in 2017, the team consisting of: Chuiko Sergey,Svityi Andrii, Susulovskyi Taras and Darya Boychuk started the project "GPS tracker".</p>
