--- a/GpsTracker.Site/pages/header.html
+++ b/GpsTracker.Site/pages/header.html
@@ -16,7 +16,7 @@
 			<div class="collapse navbar-collapse navbar-right col-7" id="top_menu">
 				<ul class="menu">
 					<li class="col-1">
-						<a href="#" class="btn btn-default" id="test1">Download</a>
+						<a href="https://github.com/SADYaTTeam/GpsTracker2017/raw/feature/GpsTracker.App.Release/app-debug.apk" class="btn btn-default" id="download">Download</a>
 					</li>
 					<li class="col-1">
 						<button onclick="show()" class="btn btn-default" id="test2">About</button>
